Fix bug where content would shift on reload

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -32,7 +32,7 @@
     --input-char-size: 40ch;
 
     --nav-sidebar-width: 4rem;
-    --nav-foldout-width: 0;
+    --nav-foldout-width: 0rem;
     --nav-width: calc(var(--nav-sidebar-width) + var(--nav-foldout-width));
 }
 
@@ -114,8 +114,7 @@ body {
 }
 
 main {
-    margin: auto;
-    margin-left: var(--nav-width);
+    margin: auto auto auto var(--nav-width);
     height: calc(100dvh - env(titlebar-area-height, var(--header-fallback-height)));
     padding: 1rem;
     overflow: auto;
@@ -206,7 +205,7 @@ nav hr {
 .nav__foldout {
     width: 100%;
     background-color: var(--nav-foldout-color);
-    padding: min(0.5rem, var(--nav-foldout-width));
+    padding: min(0.5rem, max(var(--nav-foldout-width), 0));
 }
 
 .settings-nav legend {
